--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <p> * a simple responsive web application for Rolling Dice</p>
                         <p> * A button is designed for Rolling the dice </p>
                         <p> * HTML CSS and JAVASCRIPT is used for develope the application</p>
-                        <p> * View Deployment:<br><a href="https://amitm2922.github.io/Todos/" style="color:blue">https://amitm2922.github.io/Todos/</a></p>
+                        <p> * View Deployment:<br><a href="https://amitm2922.github.io/DiceRoller/" style="color:blue">https://amitm2922.github.io/DiceRoller/</a></p>
                     </div>
 
                     
