--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1>I'M <span id="amit">Amit Mulmule</span></h1>
     <p>I seek challenging opportunities where I can fully use my skills for the success of the organization.</p>
     <a href="#education"><button class="btn">experience <i class="fas fa-laptop-house"></i></button></a>
-    <a  href="assest/CV/Resume.docx" download="Resume" ><button class="btn" type="button"> download CV <i class="fas fa-download"></i> </button></a>
+    <a  href="assest/CV/Amit_Mulmule_Resume.docx" download="Resume" ><button class="btn" type="button"> download CV <i class="fas fa-download"></i> </button></a>
 
 </section>
 
